# GaleScrip

./: CMakeLists.txt  README.md  build.sh
GaleApp/: CMakeLists.txt
GaleApp/Source/: main.cpp
GaleCore/: CMakeLists.txt
GaleCore/Source/: Utils.cpp
GaleCore/Source/ast/Lexer/: lexer.cpp
GaleCore/Source/ast/Tokens/: tokens.h
Gale_App/Source/: main.cpp
src/: CMakeLists.txt
tests/: test.gale
